--- a/IDCalculator/IDCalculator/IDCalculator-Info.plist
+++ b/IDCalculator/IDCalculator/IDCalculator-Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.kooobao.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.kooobao.${PRODUCT_NAME}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
