--- a/IDCalculator/IDCalculator/Settings.bundle/Root.plist
+++ b/IDCalculator/IDCalculator/Settings.bundle/Root.plist
@@ -34,6 +34,36 @@
 			<key>Type</key>
 			<string>PSGroupSpecifier</string>
 			<key>Title</key>
+			<string>Calculator</string>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSMultiValueSpecifier</string>
+			<key>Title</key>
+			<string>Font</string>
+			<key>Key</key>
+			<string>calculator_textsize</string>
+			<key>DefaultValue</key>
+			<integer>18</integer>
+			<key>Titles</key>
+			<array>
+				<string>14</string>
+				<string>18</string>
+				<string>22</string>
+				<string>26</string>
+			</array>
+			<key>Values</key>
+			<array>
+				<integer>14</integer>
+				<integer>18</integer>
+				<integer>22</integer>
+				<integer>26</integer>
+			</array>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSGroupSpecifier</string>
+			<key>Title</key>
 			<string>Console</string>
 		</dict>
 		<dict>
